made changes to gitignore

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,12 @@
         "distDir": "client/build"
       }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/client/$1"
+    }
   ]
+
 }
